package Questao04Relatorio;

public interface iRelatorio {

    public String Descricao();
    public double Custo();
}